--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -246,32 +246,6 @@ border-radius: 8px;
         </rect>
        </property>
       </widget>
-      <widget class="QRadioButton" name="radioButton">
-       <property name="geometry">
-        <rect>
-         <x>140</x>
-         <y>230</y>
-         <width>99</width>
-         <height>22</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Vente</string>
-       </property>
-      </widget>
-      <widget class="QRadioButton" name="radioButton_2">
-       <property name="geometry">
-        <rect>
-         <x>260</x>
-         <y>230</y>
-         <width>99</width>
-         <height>22</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Location</string>
-       </property>
-      </widget>
       <widget class="QLineEdit" name="price">
        <property name="geometry">
         <rect>
@@ -280,19 +254,6 @@ border-radius: 8px;
          <width>113</width>
          <height>24</height>
         </rect>
-       </property>
-      </widget>
-      <widget class="QCheckBox" name="checkBox">
-       <property name="geometry">
-        <rect>
-         <x>90</x>
-         <y>440</y>
-         <width>85</width>
-         <height>22</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Logé</string>
        </property>
       </widget>
       <widget class="QPushButton" name="pushButton_5">
@@ -339,6 +300,26 @@ border-radius: 8px;
         <rect>
          <x>130</x>
          <y>340</y>
+         <width>113</width>
+         <height>24</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="type">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>230</y>
+         <width>113</width>
+         <height>24</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="status">
+       <property name="geometry">
+        <rect>
+         <x>120</x>
+         <y>440</y>
          <width>113</width>
          <height>24</height>
         </rect>
