--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -58,7 +58,7 @@ border-radius: 8px;
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -334,16 +334,16 @@ border-radius: 8px;
      <widget class="QGroupBox" name="groupBox_2">
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>10</x>
         <y>10</y>
-        <width>361</width>
+        <width>461</width>
         <height>541</height>
        </rect>
       </property>
       <property name="title">
        <string>Modifier une propriete</string>
       </property>
-      <widget class="QComboBox" name="comboBox">
+      <widget class="QComboBox" name="comboo">
        <property name="geometry">
         <rect>
          <x>120</x>
@@ -392,17 +392,37 @@ border-radius: 8px;
         <string>Modifier</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="generer">
        <property name="geometry">
         <rect>
-         <x>280</x>
-         <y>500</y>
+         <x>300</x>
+         <y>460</y>
          <width>150</width>
          <height>19</height>
         </rect>
        </property>
        <property name="text">
         <string>Annuler</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="typeprop">
+       <property name="geometry">
+        <rect>
+         <x>110</x>
+         <y>270</y>
+         <width>113</width>
+         <height>24</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="status_2">
+       <property name="geometry">
+        <rect>
+         <x>80</x>
+         <y>490</y>
+         <width>113</width>
+         <height>24</height>
+        </rect>
        </property>
       </widget>
      </widget>
@@ -419,16 +439,6 @@ border-radius: 8px;
        <string>Adresse</string>
       </property>
      </widget>
-     <widget class="QTextBrowser" name="textBrowser_2">
-      <property name="geometry">
-       <rect>
-        <x>140</x>
-        <y>380</y>
-        <width>101</width>
-        <height>61</height>
-       </rect>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_12">
       <property name="geometry">
        <rect>
@@ -442,20 +452,7 @@ border-radius: 8px;
        <string>Description</string>
       </property>
      </widget>
-     <widget class="QRadioButton" name="radioButton_3">
-      <property name="geometry">
-       <rect>
-        <x>140</x>
-        <y>280</y>
-        <width>99</width>
-        <height>22</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Vente</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEdit_7">
+     <widget class="QLineEdit" name="cinprop">
       <property name="geometry">
        <rect>
         <x>170</x>
@@ -478,7 +475,7 @@ border-radius: 8px;
        <string>status</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEdit_8">
+     <widget class="QLineEdit" name="adre">
       <property name="geometry">
        <rect>
         <x>140</x>
@@ -488,7 +485,7 @@ border-radius: 8px;
        </rect>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEdit_9">
+     <widget class="QLineEdit" name="pri">
       <property name="geometry">
        <rect>
         <x>130</x>
@@ -511,7 +508,7 @@ border-radius: 8px;
        <string>Prenom du proprietaire</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEdit_10">
+     <widget class="QLineEdit" name="nomprop">
       <property name="geometry">
        <rect>
         <x>150</x>
@@ -534,7 +531,7 @@ border-radius: 8px;
        <string>Type</string>
       </property>
      </widget>
-     <widget class="QLineEdit" name="lineEdit_11">
+     <widget class="QLineEdit" name="prenompropr">
       <property name="geometry">
        <rect>
         <x>170</x>
@@ -557,32 +554,6 @@ border-radius: 8px;
        <string>Cin</string>
       </property>
      </widget>
-     <widget class="QCheckBox" name="checkBox_2">
-      <property name="geometry">
-       <rect>
-        <x>90</x>
-        <y>490</y>
-        <width>85</width>
-        <height>22</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Logé</string>
-      </property>
-     </widget>
-     <widget class="QRadioButton" name="radioButton_4">
-      <property name="geometry">
-       <rect>
-        <x>260</x>
-        <y>280</y>
-        <width>99</width>
-        <height>22</height>
-       </rect>
-      </property>
-      <property name="text">
-       <string>Location</string>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_17">
       <property name="geometry">
        <rect>
@@ -599,7 +570,7 @@ border-radius: 8px;
      <widget class="QGroupBox" name="groupBox_3">
       <property name="geometry">
        <rect>
-        <x>380</x>
+        <x>520</x>
         <y>20</y>
         <width>361</width>
         <height>501</height>
@@ -658,6 +629,16 @@ border-radius: 8px;
        </property>
       </widget>
      </widget>
+     <widget class="QLineEdit" name="decri">
+      <property name="geometry">
+       <rect>
+        <x>130</x>
+        <y>390</y>
+        <width>113</width>
+        <height>24</height>
+       </rect>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
@@ -675,134 +656,15 @@ border-radius: 8px;
       <property name="title">
        <string>GroupBox</string>
       </property>
-      <widget class="QTableWidget" name="tableWidget">
+      <widget class="QTableView" name="tableView">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>40</y>
-         <width>911</width>
-         <height>221</height>
+         <x>110</x>
+         <y>50</y>
+         <width>771</width>
+         <height>361</height>
         </rect>
        </property>
-       <property name="styleSheet">
-        <string notr="true">color: rgb(255, 149, 149);
-border-color: rgb(0, 0, 0);
-border-left-color: rgb(75, 75, 75);
-gridline-color: rgb(0, 0, 0);</string>
-       </property>
-       <row>
-        <property name="text">
-         <string>1</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>2</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>3</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>4</string>
-        </property>
-       </row>
-       <row>
-        <property name="text">
-         <string>5</string>
-        </property>
-       </row>
-       <column>
-        <property name="text">
-         <string>Matricule</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Nom</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Prénom</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>CIN</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Adresse</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Type</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Prix</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Status</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>QR Code</string>
-        </property>
-       </column>
-       <item row="0" column="0">
-        <property name="text">
-         <string>541133</string>
-        </property>
-       </item>
-       <item row="0" column="1">
-        <property name="text">
-         <string>Siuuuuu</string>
-        </property>
-       </item>
-       <item row="0" column="2">
-        <property name="text">
-         <string>Siuuuu</string>
-        </property>
-       </item>
-       <item row="0" column="3">
-        <property name="text">
-         <string>070707</string>
-        </property>
-       </item>
-       <item row="0" column="4">
-        <property name="text">
-         <string>Rue Hanon Tunis</string>
-        </property>
-       </item>
-       <item row="0" column="5">
-        <property name="text">
-         <string>Vente</string>
-        </property>
-       </item>
-       <item row="0" column="6">
-        <property name="text">
-         <string>900000</string>
-        </property>
-       </item>
-       <item row="0" column="7">
-        <property name="text">
-         <string>Logée</string>
-        </property>
-        <property name="checkState">
-         <enum>Checked</enum>
-        </property>
-       </item>
       </widget>
      </widget>
     </widget>
