--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -51,14 +51,14 @@ border-radius: 8px;
    <widget class="QTabWidget" name="tabWidget">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>0</x>
       <y>0</y>
       <width>1061</width>
       <height>601</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -256,7 +256,7 @@ border-radius: 8px;
         </rect>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushButton_5">
+      <widget class="QPushButton" name="qrpushbutton">
        <property name="geometry">
         <rect>
          <x>369</x>
@@ -272,8 +272,8 @@ border-radius: 8px;
       <widget class="QPushButton" name="Ajouter">
        <property name="geometry">
         <rect>
-         <x>360</x>
-         <y>370</y>
+         <x>250</x>
+         <y>420</y>
          <width>150</width>
          <height>19</height>
         </rect>
@@ -285,8 +285,8 @@ border-radius: 8px;
       <widget class="QPushButton" name="pushButton_7">
        <property name="geometry">
         <rect>
-         <x>350</x>
-         <y>420</y>
+         <x>240</x>
+         <y>460</y>
          <width>150</width>
          <height>19</height>
         </rect>
@@ -346,6 +346,32 @@ border-radius: 8px;
        </property>
        <property name="text">
         <string>ID</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="qrlabel">
+       <property name="geometry">
+        <rect>
+         <x>360</x>
+         <y>160</y>
+         <width>151</width>
+         <height>141</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QProgressBar" name="progressBar">
+       <property name="geometry">
+        <rect>
+         <x>380</x>
+         <y>370</y>
+         <width>118</width>
+         <height>23</height>
+        </rect>
+       </property>
+       <property name="value">
+        <number>24</number>
        </property>
       </widget>
      </widget>
@@ -671,9 +697,9 @@ border-radius: 8px;
       <property name="geometry">
        <rect>
         <x>20</x>
-        <y>30</y>
+        <y>10</y>
         <width>981</width>
-        <height>491</height>
+        <height>511</height>
        </rect>
       </property>
       <property name="title">
@@ -683,9 +709,70 @@ border-radius: 8px;
        <property name="geometry">
         <rect>
          <x>100</x>
-         <y>50</y>
-         <width>771</width>
+         <y>130</y>
+         <width>781</width>
          <height>361</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="comboBox">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>50</y>
+         <width>131</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <item>
+        <property name="text">
+         <string>Matricule</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>CIN</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Nom</string>
+        </property>
+       </item>
+      </widget>
+      <widget class="QLabel" name="label_21">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>50</y>
+         <width>101</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>selectionner le critere de recherche </string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_2">
+       <property name="geometry">
+        <rect>
+         <x>430</x>
+         <y>50</y>
+         <width>150</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Rechercher</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="chercher">
+       <property name="geometry">
+        <rect>
+         <x>290</x>
+         <y>50</y>
+         <width>113</width>
+         <height>24</height>
         </rect>
        </property>
       </widget>
