--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -45,6 +45,9 @@ padding: 1px;
 border-style: solid;
 border: 2px solid gray;
 border-radius: 8px;
+}
+QProgressBar {
+background-color: rgb(255, 140, 0);
 }</string>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -69,8 +72,8 @@ border-radius: 8px;
        <rect>
         <x>10</x>
         <y>20</y>
-        <width>531</width>
-        <height>491</height>
+        <width>961</width>
+        <height>541</height>
        </rect>
       </property>
       <property name="title">
@@ -132,7 +135,7 @@ border-radius: 8px;
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>230</y>
+         <y>220</y>
          <width>56</width>
          <height>16</height>
         </rect>
@@ -145,7 +148,7 @@ border-radius: 8px;
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>290</y>
+         <y>280</y>
          <width>56</width>
          <height>16</height>
         </rect>
@@ -158,7 +161,7 @@ border-radius: 8px;
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>340</y>
+         <y>330</y>
          <width>111</width>
          <height>16</height>
         </rect>
@@ -170,8 +173,8 @@ border-radius: 8px;
       <widget class="QLabel" name="label_8">
        <property name="geometry">
         <rect>
-         <x>30</x>
-         <y>410</y>
+         <x>20</x>
+         <y>390</y>
          <width>56</width>
          <height>16</height>
         </rect>
@@ -183,8 +186,8 @@ border-radius: 8px;
       <widget class="QLabel" name="label_9">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>440</y>
+         <x>20</x>
+         <y>430</y>
          <width>81</width>
          <height>16</height>
         </rect>
@@ -196,7 +199,7 @@ border-radius: 8px;
       <widget class="QLineEdit" name="Matricule">
        <property name="geometry">
         <rect>
-         <x>130</x>
+         <x>150</x>
          <y>50</y>
          <width>113</width>
          <height>24</height>
@@ -239,8 +242,8 @@ border-radius: 8px;
       <widget class="QLineEdit" name="adresse">
        <property name="geometry">
         <rect>
-         <x>140</x>
-         <y>290</y>
+         <x>90</x>
+         <y>280</y>
          <width>113</width>
          <height>24</height>
         </rect>
@@ -250,7 +253,7 @@ border-radius: 8px;
        <property name="geometry">
         <rect>
          <x>130</x>
-         <y>400</y>
+         <y>380</y>
          <width>113</width>
          <height>24</height>
         </rect>
@@ -259,8 +262,8 @@ border-radius: 8px;
       <widget class="QPushButton" name="qrpushbutton">
        <property name="geometry">
         <rect>
-         <x>369</x>
-         <y>330</y>
+         <x>410</x>
+         <y>70</y>
          <width>150</width>
          <height>19</height>
         </rect>
@@ -272,8 +275,8 @@ border-radius: 8px;
       <widget class="QPushButton" name="Ajouter">
        <property name="geometry">
         <rect>
-         <x>250</x>
-         <y>420</y>
+         <x>20</x>
+         <y>480</y>
          <width>150</width>
          <height>19</height>
         </rect>
@@ -285,8 +288,8 @@ border-radius: 8px;
       <widget class="QPushButton" name="pushButton_7">
        <property name="geometry">
         <rect>
-         <x>240</x>
-         <y>460</y>
+         <x>190</x>
+         <y>480</y>
          <width>150</width>
          <height>19</height>
         </rect>
@@ -299,7 +302,7 @@ border-radius: 8px;
        <property name="geometry">
         <rect>
          <x>130</x>
-         <y>340</y>
+         <y>330</y>
          <width>113</width>
          <height>24</height>
         </rect>
@@ -308,8 +311,8 @@ border-radius: 8px;
       <widget class="QLineEdit" name="type">
        <property name="geometry">
         <rect>
-         <x>140</x>
-         <y>230</y>
+         <x>170</x>
+         <y>220</y>
          <width>113</width>
          <height>24</height>
         </rect>
@@ -318,41 +321,18 @@ border-radius: 8px;
       <widget class="QLineEdit" name="status">
        <property name="geometry">
         <rect>
-         <x>120</x>
-         <y>440</y>
+         <x>130</x>
+         <y>420</y>
          <width>113</width>
          <height>24</height>
         </rect>
        </property>
       </widget>
-      <widget class="QComboBox" name="etranger">
-       <property name="geometry">
-        <rect>
-         <x>400</x>
-         <y>80</y>
-         <width>75</width>
-         <height>24</height>
-        </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_20">
-       <property name="geometry">
-        <rect>
-         <x>360</x>
-         <y>80</y>
-         <width>71</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>ID</string>
-       </property>
-      </widget>
       <widget class="QLabel" name="qrlabel">
        <property name="geometry">
         <rect>
-         <x>360</x>
-         <y>160</y>
+         <x>600</x>
+         <y>40</y>
          <width>151</width>
          <height>141</height>
         </rect>
@@ -364,14 +344,82 @@ border-radius: 8px;
       <widget class="QProgressBar" name="progressBar">
        <property name="geometry">
         <rect>
-         <x>380</x>
-         <y>370</y>
+         <x>430</x>
+         <y>120</y>
          <width>118</width>
          <height>23</height>
         </rect>
        </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 140, 0);</string>
+       </property>
        <property name="value">
         <number>24</number>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="post">
+       <property name="geometry">
+        <rect>
+         <x>220</x>
+         <y>280</y>
+         <width>51</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>code</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="ville">
+       <property name="geometry">
+        <rect>
+         <x>290</x>
+         <y>280</y>
+         <width>51</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>ville</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="country">
+       <property name="geometry">
+        <rect>
+         <x>360</x>
+         <y>280</y>
+         <width>51</width>
+         <height>24</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>country</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="map">
+       <property name="geometry">
+        <rect>
+         <x>260</x>
+         <y>390</y>
+         <width>150</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>PushButton</string>
+       </property>
+      </widget>
+      <widget class="QQuickWidget" name="quickWidget">
+       <property name="geometry">
+        <rect>
+         <x>470</x>
+         <y>210</y>
+         <width>471</width>
+         <height>321</height>
+        </rect>
+       </property>
+       <property name="resizeMode">
+        <enum>QQuickWidget::SizeRootObjectToView</enum>
        </property>
       </widget>
      </widget>
@@ -781,6 +829,13 @@ border-radius: 8px;
    </widget>
   </widget>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>QQuickWidget</class>
+   <extends>QWidget</extends>
+   <header location="global">QtQuickWidgets/QQuickWidget</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
