--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,10 +24,9 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">#mainwindow{
-background: gray;
+     <string notr="true">QGroupBox::indicator:unchecked {
+    image: url(:back.png);
 }
-
 
 #mainFrame {
 border: 3px solid gray;
@@ -37,7 +36,7 @@ background: white;
 QPushButton {
 color: white;
 background-color:#FF8C00;
-width: 140px;
+width: 180px;
 border-color: #340;
 border-style: solid;
 border-radius: 7;
@@ -76,7 +75,7 @@ font-size:15px;
 </string>
     </property>
     <property name="currentIndex">
-     <number>0</number>
+     <number>2</number>
     </property>
     <widget class="QWidget" name="affiche">
      <attribute name="title">
@@ -242,7 +241,7 @@ font-size:15px;
         <rect>
          <x>120</x>
          <y>390</y>
-         <width>150</width>
+         <width>190</width>
          <height>19</height>
         </rect>
        </property>
@@ -260,7 +259,7 @@ font-size:15px;
         <rect>
          <x>280</x>
          <y>390</y>
-         <width>150</width>
+         <width>190</width>
          <height>19</height>
         </rect>
        </property>
@@ -288,7 +287,7 @@ font-size:15px;
         <rect>
          <x>460</x>
          <y>390</y>
-         <width>150</width>
+         <width>190</width>
          <height>19</height>
         </rect>
        </property>
@@ -329,7 +328,7 @@ font-size:15px;
         <rect>
          <x>210</x>
          <y>420</y>
-         <width>150</width>
+         <width>190</width>
          <height>19</height>
         </rect>
        </property>
@@ -383,7 +382,7 @@ font-size:15px;
         <rect>
          <x>30</x>
          <y>420</y>
-         <width>150</width>
+         <width>190</width>
          <height>19</height>
         </rect>
        </property>
@@ -510,7 +509,7 @@ font-size:15px;
         <rect>
          <x>220</x>
          <y>80</y>
-         <width>150</width>
+         <width>190</width>
          <height>19</height>
         </rect>
        </property>
@@ -605,7 +604,7 @@ font-size:15px;
         <rect>
          <x>280</x>
          <y>550</y>
-         <width>150</width>
+         <width>190</width>
          <height>19</height>
         </rect>
        </property>
@@ -623,7 +622,7 @@ font-size:15px;
         <rect>
          <x>160</x>
          <y>550</y>
-         <width>150</width>
+         <width>190</width>
          <height>19</height>
         </rect>
        </property>
@@ -641,7 +640,7 @@ font-size:15px;
         <rect>
          <x>170</x>
          <y>250</y>
-         <width>150</width>
+         <width>190</width>
          <height>19</height>
         </rect>
        </property>
@@ -659,7 +658,7 @@ font-size:15px;
         <rect>
          <x>10</x>
          <y>250</y>
-         <width>150</width>
+         <width>190</width>
          <height>19</height>
         </rect>
        </property>
@@ -687,7 +686,7 @@ font-size:15px;
         <rect>
          <x>170</x>
          <y>120</y>
-         <width>150</width>
+         <width>190</width>
          <height>19</height>
         </rect>
        </property>
@@ -705,7 +704,7 @@ font-size:15px;
         <rect>
          <x>10</x>
          <y>120</y>
-         <width>150</width>
+         <width>190</width>
          <height>19</height>
         </rect>
        </property>
@@ -742,42 +741,6 @@ font-size:15px;
        <string>Les transactions : </string>
       </property>
      </widget>
-     <widget class="QPushButton" name="pushButton_9">
-      <property name="geometry">
-       <rect>
-        <x>210</x>
-        <y>360</y>
-        <width>150</width>
-        <height>19</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>-1</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Tri</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="pushButton_10">
-      <property name="geometry">
-       <rect>
-        <x>40</x>
-        <y>360</y>
-        <width>150</width>
-        <height>19</height>
-       </rect>
-      </property>
-      <property name="font">
-       <font>
-        <pointsize>-1</pointsize>
-       </font>
-      </property>
-      <property name="text">
-       <string>Recherche</string>
-      </property>
-     </widget>
      <widget class="QTableView" name="tableView">
       <property name="geometry">
        <rect>
@@ -791,9 +754,9 @@ font-size:15px;
      <widget class="QPushButton" name="pushButton_29">
       <property name="geometry">
        <rect>
-        <x>380</x>
-        <y>360</y>
-        <width>150</width>
+        <x>50</x>
+        <y>350</y>
+        <width>190</width>
         <height>19</height>
        </rect>
       </property>
@@ -803,8 +766,292 @@ font-size:15px;
        </font>
       </property>
       <property name="text">
-       <string>Excel</string>
+       <string>Exporter dans fichier excel</string>
       </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab">
+     <attribute name="title">
+      <string>Rechercher</string>
+     </attribute>
+     <widget class="QGroupBox" name="groupBox_5">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>10</y>
+        <width>691</width>
+        <height>431</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>16</pointsize>
+       </font>
+      </property>
+      <property name="title">
+       <string>Rechercher une transaction</string>
+      </property>
+      <widget class="QLabel" name="label_6">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>80</y>
+         <width>91</width>
+         <height>31</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>10</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>ID : </string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="id_transaction_2">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>90</y>
+         <width>151</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_31">
+       <property name="geometry">
+        <rect>
+         <x>250</x>
+         <y>170</y>
+         <width>190</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>-1</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Annuler</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_32">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>170</y>
+         <width>190</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>-1</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Rechercher</string>
+       </property>
+      </widget>
+      <widget class="QTableView" name="tableView2">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>210</y>
+         <width>661</width>
+         <height>201</height>
+        </rect>
+       </property>
+      </widget>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_5">
+     <attribute name="title">
+      <string>Tri</string>
+     </attribute>
+     <widget class="QGroupBox" name="groupBox_11">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>20</y>
+        <width>691</width>
+        <height>431</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>16</pointsize>
+       </font>
+      </property>
+      <property name="title">
+       <string>Trier les transactions</string>
+      </property>
+      <widget class="QPushButton" name="pushButton_33">
+       <property name="geometry">
+        <rect>
+         <x>220</x>
+         <y>360</y>
+         <width>190</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>-1</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Annuler</string>
+       </property>
+      </widget>
+      <widget class="QTableView" name="tableView3">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>50</y>
+         <width>661</width>
+         <height>241</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_34">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>360</y>
+         <width>190</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>-1</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Trier</string>
+       </property>
+      </widget>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_2">
+     <attribute name="title">
+      <string>Historique</string>
+     </attribute>
+     <widget class="QLabel" name="label_19">
+      <property name="geometry">
+       <rect>
+        <x>60</x>
+        <y>20</y>
+        <width>401</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>14</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>Historique des transactions :</string>
+      </property>
+     </widget>
+     <widget class="QTextBrowser" name="textBrowser">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>110</y>
+        <width>681</width>
+        <height>331</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_15">
+      <property name="geometry">
+       <rect>
+        <x>40</x>
+        <y>80</y>
+        <width>190</width>
+        <height>19</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Afficher</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_4">
+     <attribute name="title">
+      <string>Gain </string>
+     </attribute>
+     <widget class="QGroupBox" name="groupBox_12">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>30</y>
+        <width>691</width>
+        <height>431</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>16</pointsize>
+       </font>
+      </property>
+      <property name="title">
+       <string>Gain de transactions</string>
+      </property>
+      <widget class="QTableView" name="tableView3_3">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>80</y>
+         <width>631</width>
+         <height>241</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_38">
+       <property name="geometry">
+        <rect>
+         <x>230</x>
+         <y>340</y>
+         <width>190</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>-1</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Calculer le gain</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="pushButton_39">
+       <property name="geometry">
+        <rect>
+         <x>30</x>
+         <y>340</y>
+         <width>190</width>
+         <height>19</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>-1</pointsize>
+        </font>
+       </property>
+       <property name="text">
+        <string>Afficher les transactions</string>
+       </property>
+      </widget>
      </widget>
     </widget>
    </widget>
